수정했습니다.
항모는 항공모함이라는 완전한 이름으로 바꾸었고, 
신을 찬미하세 - 그리고 탄약을 전달하라 -이건 Praise the Lord and Pass the Ammunition라는 노래랑 관련이 있는거 같아서 두개가 이어지도록 해놨습니다.
그리고 개헌은 징집법 개정으로 바꿨습니다, Conscription Law Change인데 이전 번역자분이 착각하신듯.

근데 패튼의 차량화 계획이 설명 한줄만 있고 제목은 사라졌네요, 파일에다가 붙여넣어야할거같습니다.

--- a/Kaiserreich Korean Translation/localisation/KR_American_Union_State_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_American_Union_State_l_english.yml
@@ -13,13 +13,13 @@ TEX_motorized_effort:0 "차량화 개발"
 TEX_motorized_effort_desc:0 "A key part of Patton's plan is motorised vehicles. By working closely with Henry Ford and other automotive leaders loyal to the true America, we can build the vehicles necessary to achieve victory."
 TEX_infantry_tanks:0 "보병 전차"
 TEX_infantry_tanks_desc:0 "For tanks to be effective they must work together with the infantry. The infantry must support our armoured cavalry for victory to be achieved. Through this team work we victory will always be ours."
-TEX_superior_fire_power:0 "Collins's combined arms plan"
+TEX_superior_fire_power:0 "콜린스의 제병합동 계획"
 TEX_superior_fire_power_desc:0 "Joseph Lawton Collins better known as Lighting Joe has proposed that the key to victory in battle is to rely on combined arms and superior firepower. His plan holds merit, let us give him the support to achieve victory."
-TEX_praise_the_lord:0 "신을 찬미하세"
+TEX_praise_the_lord:0 "신을 찬양하고"
 TEX_praise_the_lord_desc:0 "To make sure that the combined arms plans works we need to make sure that we have the best weapons available. Our soldiers need the best that we can provide."
-TEX_pass_the_ammunition:0 "그리고 탄약을 전달하라"
+TEX_pass_the_ammunition:0 "탄약을 전달하라"
 TEX_pass_the_ammunition_desc:0 "Just as we need the best rifles and infantry equipment we also need the best artillery. Let us work on producing just that. In the mean time never forget to Praise the Lord for his victory over America's Enemies!"
-TEX_conscription_law:0 "개헌"
+TEX_conscription_law:0 "징집법 개정"
 TEX_conscription_law_desc:0 "The strong military tradition of the south was not to be understated but the lack of manpower was an issue for the AUS. By reducing the age of conscription to 15 the American Union State was able to gain more manpower."
 TEX_army_nurse_corps:0 "여군 창설"
 TEX_army_nurse_corps_desc:0 "The Women Army Corps has been proposed. The WACs as they are being called would take over support roles for the men allowing more men to go to the front. In particular a good number of women wish to enter the Nursing Corps to help save the lives of patriotic Americans."
@@ -34,7 +34,7 @@ TEX_battle_cruisers:0 "전투순양함 개발"
 TEX_battle_cruisers_desc:0 "As part of Woodward's plan for the navy, we need not just battleships but battlecruisers. To that end let us get to work in researching and building the battlecruisers needed to make the American the pride of the world."
 TEX_new_battle_ships:0 "새로운 전함"
 TEX_new_battle_ships_desc:0 "To make sure that the American navy remains the envy of the world we must not languish and neglect new ways to make our Battleships better in all regards. To that end let us focus on keeping our navy up to date."
-TEX_carriers:0 "맥케인의 항모"
+TEX_carriers:0 "맥케인의 항공모함"
 TEX_carriers_desc:0 "John S. McCain Sr.'s plan for the navy focuses on Aircraft Carriers. To rule the seas we need to focus on the power of aircraft carriers and then victory will always be in our grasp."
 TEX_carrier_planes:0 "Build Carrier Planes"
 TEX_carrier_planes_desc:0 "Aircraft carriers are only as good as the planes that they are carrying. To that end let us make sure that our aircraft carriers have the best planes and that they never run out of them."
@@ -52,23 +52,23 @@ TEX_marine_corps:0 "Marine Corps"
 TEX_marine_corps_desc:0 "As we work on modernise the military forces we must not neglect the Marine Corps. As one of the most elite branches of the American Armed forces, there are still many patriotic marines whom would glady help make sure that the corps is loyal to the true republic."
 
 ### Focuses - Air Force ###
-TEX_airforce:0 "The Patriotic American Air Force"
+TEX_airforce:0 "애국적인 미국 공군"
 TEX_airforce_desc:0 "As we go to war to fight for America, we will need to build up the Air force that has patriotism in their hearts and loyalty to the Long and the true America."
-TEX_air_support:0 "Ramey's Air Support"
+TEX_air_support:0 "레이미의 공군 지원"
 TEX_air_support_desc:0 "Howard Knox Ramey believes that the best use for the Air Force is to work with the Army. By having the army and the air force work together, victory will be ours."
-TEX_cas_effort:0 "Close Air Support"
+TEX_cas_effort:0 "근접항공지원Close Air Support"
 TEX_cas_effort_desc:0 "One of the key focuses for Ramey's plan is to focus on Close Air Support. We need aircraft that can focus on getting close to the enemy and providing tactical assistance to our troops."
-TEX_tatical_bombers:0 "Tactical Bombers"
+TEX_tatical_bombers:0 "전술폭격기들"
 TEX_tatical_bombers_desc:0 "Another key part of Ramey's plan calls for tactical bombers. By having our bombers destroy the enemy troops we will help ensure that victory is ours. So let us focus on improving our tactical bombers."
-TEX_air_supremecy:0 "Lindbergh's Air Supremacy"
+TEX_air_supremecy:0 린드버그의 항공우세"
 TEX_air_supremecy_desc:0 "Charles Lindbergh believes that the best use for the Air Force is to dominate the skies. Through ruling the skies we will have victory."
 TEX_fighters:0 "Fighter Efforts"
 TEX_fighters_desc:0 "To dominate the skies we need fighters and many of the highest qualities fighters that we can produce. To that end let us modernise the air force to make sure that our air force is the envy of the world."
-TEX_strategic_bombers:0 "Strategic Bombers"
+TEX_strategic_bombers:0 "전략폭격기들"
 TEX_strategic_bombers_desc:0 "To rule the skies we need to make sure that the enemy can not even take flight to begin with. To that end Lindbergh's plan calls for a focus in strategic bombers in order to achieve just that objective."
-TEX_found_the_wasp:0 "Found the WASPs"
+TEX_found_the_wasp:0 "WASP 창설"
 TEX_found_the_wasp_desc:0 "It has been proposed that we create the Women Airforce Service Pilots or the WASPs. The organisation would help in making sure that we have more men for flying and give women whom are loyal and patriotic to the True America flying experience. This is of course Controversial but we need all the support to bring victory for America."
-TEX_rocketry:0 "Patriotic Rockets"
+TEX_rocketry:0 "애국적인 로켓들"
 TEX_rocketry_desc:0 "As we modernise our Air Force many of our scientists are looking into how rocketry and jet technology can be utilised in making our aircraft even better. Let us give them support and see what they can do for America."
 
 ### Focuses - Economic ###
