--- a/Kaiserreich Korean Translation/localisation/KR_Serbia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Serbia_l_english.yml
@@ -1,26 +1,26 @@
 l_english:
 
 ### Ideas ###
-SER_jingoism:0 "Jingoistic Reclaimers"
-SER_jingoism_desc:0 "Serbia lost the Weltkrieg and is reduced to a small rump state. The government however is very vocal about reconquering all lost territory and getting all Serbs to live in Serbia. As such, the country is highly militarised."
-SER_army_command:0 "Militarised Society"
-SER_army_command_desc:0 "The Serbian government recognises the need for a strong military. The army is valued above all else, resulting in an efficient army command."
-SER_heroic_spirit:0 "Heroic Spirit"
-SER_heroic_spirit_desc:0 "Inspired by victories and defeats of the past, the Serbian soldier will do everything to fight for their country."
-SER_strong_state_idea:0 "A Strong State"
+SER_jingoism:0 "대외강경적인 영토주장"
+SER_jingoism_desc:0 "세르비아는 세계대전에서 패했으며 작은 소국으로 전락했습니다. 정부는 고토를 되찾아서 모든 세르비아인들이 세르비아에서 살 수 있도록 강경한 태도를 보이고 있습니다. 이에, 국가는 매우 군사화되어있습니다."
+SER_army_command:0 "군사회된 사회" 
+SER_army_command_desc:0 "세르비아 정부는 강력한 군대의 필요성을 느끼고 있습니다. 군대는 그 무엇보다도 가치가 있기에, 효과적인 군 지휘체계를 갖추고 있습니다."
+SER_heroic_spirit:0 "투지넘치는 정신"
+SER_heroic_spirit_desc:0 "승리와 과거의 패배에 영감을 받아서, 세르비아의 군인들은 국가를 위해 싸울 것입니다."
+SER_strong_state_idea:0 "강력한 국가"
 SER_strong_state_idea_desc:0 "A strong state apparatus is needed to defend Serbia from all enemies that are plotting its downfall."
-SER_free_society_idea:0 "Free Society"
+SER_free_society_idea:0 "자유 사회"
 SER_free_society_idea_desc:0 "The new Serbia is a free society, where everyone is allowed to express their opinions and to partake in the democratic process. This results in people who are more willing to do their duty to the country."
-SER_science_idea:0 "Scientific Effort"
+SER_science_idea:0 "과학기술 연구"
 SER_science_idea_desc:0 "The new democratic regime recognises the need for larger investments into R&D."
-SER_beacon_of_liberty:0 "Beacon of Liberty"
-SER_beacon_of_liberty_desc:0 "Serbia is a democratic republic, a true beacon of liberty on the Balkans."
-SER_patriotic_spirit_idea:0 "Patriotic Spirit"
-SER_patriotic_spirit_idea_desc:0 "Every Serbian is a patriot and will fight for its country!"
+SER_beacon_of_liberty:0 "자유의 횃불"
+SER_beacon_of_liberty_desc:0 "세르비아는 민주공화국입니다, 발칸반도의 진정한 자유를 상징합니다."
+SER_patriotic_spirit_idea:0 "애국 정신"
+SER_patriotic_spirit_idea_desc:0 "모든 세르비아인은 애국심이 강하며 국가를 위해 싸울 것입니다!"
 SER_mobilisation_of_the_masses_idea:0 "Mobilisation of the Masses"
 SER_mobilisation_of_the_masses_idea_desc:0 "A part of general Mihailović's strategy is the mobilisation of all people in our country. Peasants can defend their farms, citizens their towns. This will become an entirely new type of warfare and will ensure that we are always victorious."
-SER_bunker_focus_idea:0 "Bunker Focus"
-SER_building_ships_faster:0 "Shipbuilding Focus"
+SER_bunker_focus_idea:0 "벙커 중점"
+SER_building_ships_faster:0 "조선소 중점"
 SER_building_ships_faster_desc:0 "By focusing our resources we will be able to quickly build us a navy."
 SER_ship_research:0 "Funded Naval Research"
 SER_occupation_of_bulgaria_idea:0 "Occupation of Bulgaria"
@@ -34,7 +34,7 @@ SER_sold_ship_to_us:0 "Sold us our new flagship"
 SER_refused_to_sell_ship:0 "Refused to sell us a battlecruiser"
 
 ### Tooltips ###
-founded_belgradepact:0 "Founded the Belgrade Pact"
+founded_belgradepact:0 "베오그라드 조약을 창설함"
 absolute_monarchy:0 "Created an absolute monarchy"
 constitutional_monarchy:0 "Created a constitutional monarchy"
 SER_heavy_fighter_bonus:0 "Heavy Fighter models"
@@ -48,17 +48,17 @@ balkan_war_started:0 "The Fourth Balkan War has started"
 ### Government ###
 
 ### Regent ###
-SER_keep_regent:0 "Continue the Regency"
+SER_keep_regent:0 "섭정을 지속"
 SER_keep_regent_desc:0 "Petar Bojović has been regent of Serbia for almost a decade. So far he had to continue his rule to prevent Austrian aggression. With the Ausgleich happening in Austria, there are calls to install Crown Prince Alexander as king. However, citing a need for continuing stability, Bojović can extend his rule as regent."
-SER_strengthen_regent_rule:0 "Strengthen Regent Rule"
+SER_strengthen_regent_rule:0 "섭정 통치 강화"
 SER_strengthen_regent_rule_desc:0 "Crown Prince Alexander is still very popular in Serbia and the decision of Bojović to continue his rule as Regent is not universally liked. The Regent needs to strengthen his rule by compromising with various political groups and influential figures."
 SER_larger_army_role:0 "Larger Army Role"
 SER_larger_army_role_desc:0 "The Regent of Serbia has close ties with several leading army figures such as Milan Nedić and Draža Mihailović. The army needs to be given a larger role in the government, so they can ensure the survival of it from threats both domestic and foreign."
 
 ### King ###
-SER_crown_the_king:0 "Crown the King"
+SER_crown_the_king:0 "왕을 선출"
 SER_crown_the_king_desc:0 "Petar Bojović has been regent of Serbia for almost a decade. So far he had to continue his rule to prevent Austrian aggression. With the Ausgleich happening in Austria, there is finally a chance to install Alexander, former Crown Prince of Serbia, as the new King. The king will still have to decide whether to rule as an autocrat or to establish a constitutional monarchy."
-SER_absolutism:0 "Absolutism"
+SER_absolutism:0 "전제주의"
 SER_absolutism_desc:0 "Now that the king has been restored, the best course of action is to rule as an autocrat, leaving little room for opposition. Serbia is in a precarious position and strong leadership is needed."
 SER_monument_to_the_unknown_hero:0 "Monument to the Unknown Hero"
 SER_monument_to_the_unknown_hero_desc:0 "The construction of a monument to the Unknown Hero will be ordered by King Alexander II of Serbia, to commemorate the victims of the Weltkrieg. Marked only by the dates 1912-1918, the monument also commemorates those lost in the Balkan Wars. The monument is designed by the renowned sculptor Ivan Mestrovic."
@@ -74,69 +74,69 @@ SER_private_companies:0 "Encourage Private Companies"
 SER_private_companies_desc:0 "We need to encourage people to start small businesses to help the economy. Private companies should be allowed more freedom to operate."
 
 ### Republic ###
-SER_declare_republic:0 "Declare a Republic"
+SER_declare_republic:0 "공화국 선포"
 SER_declare_republic_desc:0 "Petar Bojović has been regent of Serbia for almost a decade. So far he had to continue his rule to prevent Austrian aggression. With the Ausgleich happening in Austria, there is finally a chance to change this. Some argue a republic will be the best path for Serbia. The well-known intellectual Slobodan Jovanović will lead a provisional government until elections can be held."
-SER_freedom:0 "Freedom"
+SER_freedom:0 "자유"
 SER_freedom_desc:0 "The first president of the Republic, Slobodan Jovanović, is the first male in Serbia to be named Slobodan, literally meaning Freedom. The Serbian Republic is a free state in which people are allowed to express their opinions."
-SER_scientific_effort:0 "Scientific Effort"
+SER_scientific_effort:0 "과학기술 개발"
 SER_scientific_effort_desc:0 "President Slobodan Jovanović is a professor at the University of Belgrade's Faculty of Law and argues that more investment in education is needed. With help from the government we can ensure the University and other schools have enough funds to advance our research."
-SER_democracy_on_balkans:0 "Democracy on the Balkans"
+SER_democracy_on_balkans:0 "발칸반도의 민주주의"
 SER_democracy_on_balkans_desc:0 "Serbia is the only truly democratic nation on the Balkans. As such we are a shining beacon of liberty for people abroad."
 
 ### Foreign policy ###
 
 ### Belgrade Pact ###
-SER_congress_of_belgrade:0 "Congress of Belgrade"
+SER_congress_of_belgrade:0 "베오그라드 의회"
 SER_congress_of_belgrade_desc:0 "In the Weltkrieg we have lost a large part of our country to Austria and Bulgaria. Because we can't take on Austria right now, we need to look southwards. We can convene a congress in Belgrade with Romania and Greece to discuss the creation of a formal alliance aimed at Bulgaria."
-SER_ultimatum_to_bulgaria:0 "Ultimatum to Bulgaria"
+SER_ultimatum_to_bulgaria:0 "불가리아에 최후통첩"
 SER_ultimatum_to_bulgaria_desc:0 "It is time to reclaim Macedonia from Bulgaria. We can send Bulgaria an ultimatum to hand over all disputed territory, or the Belgrade Pact will declare war on them."
-SER_occupation_of_bulgaria:0 "End the Occupation"
+SER_occupation_of_bulgaria:0 "점령통치 종결"
 SER_occupation_of_bulgaria_desc:0 "Since the end of the Third Balkan War we have occupied large parts of Bulgaria. It is time to restore an independent Bulgaria, though they will be greatly reduced in size."
-SER_develop_bulgaria:0 "Develop Bulgaria"
+SER_develop_bulgaria:0 "불가리아 개발"
 SER_develop_bulgaria_desc:0 "The occupation has ravaged Bulgaria and under our guidance, they may be allowed to develop a small industrial base again."
-SER_democratic_bulgaria:0 "A Democratic Bulgaria"
+SER_democratic_bulgaria:0 "민주주의 불가리아"
 SER_democratic_bulgaria_desc:0 "We are a democratic nation ourselves and we need to bring these values to our new friends in Bulgaria, so that there may be peace forever between our countries."
-SER_integrate_macedonia:0 "Integrate Macedonia"
+SER_integrate_macedonia:0 "마케도니아 합병"
 SER_integrate_macedonia_desc:0 "Our new territories in Macedonia need to be fully integrated into the Serbian state. While we briefly ruled them after the Second Balkan War, we are now here to stay. The population should understand that they are to become a part of Serbia."
-SER_develop_macedonia:0 "Develop Macedonia"
+SER_develop_macedonia:0 "마케도니아 개발"
 SER_develop_macedonia_desc:0 "Now that Macedonia is finally back in our hands, we need to develop its industry."
 
 ### Expansion ###
-SER_greater_serbia:0 "Greater Serbia"
+SER_greater_serbia:0 "대 세르비아"
 SER_greater_serbia_desc:0 "Our regime is established, and we can now begin to consider our stance with regard to the rest of the world. We can once again pursue the Greater Serbia policy - to enlarge Serbia with territories containing Serbian populations, which is greatly popular in political and military circles."
-SER_slavic_federation:0 "A Slavic Federation"
+SER_slavic_federation:0 "슬라브 연합"
 SER_slavic_federation_desc:0 "Our regime is established, and we can now begin to consider our stance with regard to the rest of the world. We can try to create a Slavic Federation, uniting all Slavs on the Balkans in one state for Serbs, Croats and Slovenes."
-SER_conquer_vojvodina:0 "Conquer Vojvodina"
+SER_conquer_vojvodina:0 "보이보디나 정복"
 SER_conquer_vojvodina_desc:0 "Vojvodina and Eastern Banat are rightfully Serbian. Despite the Hungarian policy of Magyarisation the Serbians are still a majority. We should finally unite those lands with the motherland."
-SER_albanian_question:0 "The Albanian Question"
+SER_albanian_question:0 "알바니아 문제"
 SER_albanian_question_desc:0 "The failing Albanian state continues to agitate for Kosovo. It is time to put this matter to rest and wipe this little country off the map."
-SER_free_bosnia:0 "Free Bosnia"
+SER_free_bosnia:0 "보스니아 해방"
 SER_free_bosnia_desc:0 "Bosnia has a large Serbian minority. It is time to finally free Bosnia from the clutches of the Austrian Empire."
-SER_integrate_bosnia:0 "Integrate Bosnia"
+SER_integrate_bosnia:0 "보스니아 합병"
 SER_integrate_bosnia_desc:0 "Bosnia has been added to our nation, but there is still resistance amongst the Muslim population against our new rule. We need to appease them and fully integrate Bosnia into our country."
-SER_claim_dalmatia:0 "Claim Dalmatia"
+SER_claim_dalmatia:0 "달마티아 요구"
 SER_claim_dalmatia_desc:0 "Serbia needs access to the Adriatic Sea. Dalmatia would be the best target for expansion in this direction."
-SER_status_of_montenegro:0 "Status of Montenegro"
+SER_status_of_montenegro:0 "몬테네그로의 지위"
 SER_status_of_montenegro_desc:0 "Montenegro should become a part of Serbia. It will provide us with access to the Adriatic Sea and give us more loyal citizens for our armies. The largely Serbian population has expressed the wish to join our state. We can pressure Illyria to give Montenegro up in return for guarantees that we will not make any more demands towards them, for the time being."
-SER_form_yugoslavia:0 "Form Yugoslavia"
+SER_form_yugoslavia:0 "유고슬라비아 형성"
 SER_form_yugoslavia_desc:0 "Serbia has successfully prevailed against everyone who tried to prevent the unification of the western Balkans under our banner. We can now create Yugoslavia to finally unite the Slavic nations of the Balkan peninsula and bring peace to this troubled region!"
-SER_claim_slovenia:0 "Conquer Slovenia"
+SER_claim_slovenia:0 "슬로베니아 정복"
 SER_claim_slovenia_desc:0 "We have formed a union of the Slavic people, but the Slovenes still live outside Yugoslavia. We need to bring them into our country too."
-SER_a_serbian_nation:0 "A Serbian Nation"
+SER_a_serbian_nation:0 "세르비아 국가"
 SER_a_serbian_nation_desc:0 "Serbia is a nation for the Serbs, and while we tolerate other people living inside our country, we need to make sure we survive as a nation for the Serbian people."
-SER_extra_research_slot_ii:0 "Expand the Belgrade University"
+SER_extra_research_slot_ii:0 "베오그라드 대학 확장"
 SER_extra_research_slot_ii_desc:0 "With our larger country scientist flock to Belgrade and its university, and we can improve our research into different fields."
 
 ### Economy ###
-SER_new_economic_policy:0 "New Economic Policy"
+SER_new_economic_policy:0 "신 경제 정책"
 SER_new_economic_policy_desc:0 "Serbia needs a New Economic Policy, to advance our fledgling economy. As a nation of peasants, we can choose to improve and modernise our agriculture. Another option is to push for a modern industrial complex in order to challenge other advanced nations."
-SER_agriculture:0 "Focus on Agriculture"
+SER_agriculture:0 "농업 중심"
 SER_agriculture_desc:0 "As a nation of peasants, we need to improve and modernise our agriculture."
-SER_support_peasants:0 "Support the Peasants"
+SER_support_peasants:0 "농부들을 지원하자"
 SER_support_peasants_desc:0 "Serbia has a large agrarian sector, and we need to support the peasants in times of needs to ensure we will never experience famine."
-SER_mechanisation:0 "Mechanisation"
+SER_mechanisation:0 "기계화"
 SER_mechanisation_desc:0 "Our agriculture is backwards compared to other countries and we need to invest in mechanisation."
-SER_industry:0 "Focus on Industry"
+SER_industry:0 "산업 중점"
 SER_industry_desc:0 "We need to push for a modern industrial complex in order to challenge other advanced nations."
 SER_expand_bor_mining_complex:0 "Expand Bor Mining Complex"
 SER_expand_bor_mining_complex_desc:0 "As a part of our industrialisation program, a new larger pit has to be opened at the Bor mining complex. This expansion and modernisation of our production capacities will help to support our growing industry."
