--- a/Kaiserreich Korean Translation/localisation/KR_Albania_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Albania_l_english.yml
@@ -2,21 +2,21 @@
 
 ### Events ###
 albania.1.t:0 "알바니아 공국"
-albania.1.d:0 "1912년 제1차 발칸 전쟁 당시 바르샤바에서 열린 알바니아의 알바니아 민족 의회는 1913년에 Wied의 Wilhelms이 왕자로 인정 받을 수 있다는 조건 하에 주요 강대국들에 의해 받아들여진 독립을 선언했다. 세계 대전의 발발은 오스트리아-헝가리 제국이 그들과 함께 싸울 것을 요구했기 때문에 국가에 더 많은 문제를 안겨 주었다. Wilhelm 왕자는 런던 협약에서의 알바니아의 중립성을 인용하면서 그가 받던 보상은 중단되었다. 그의 정권은 무너졌고 Wilhelm 왕자는 1914 년 9 월 3 일에 나라를 떠났고 형식적으로 그가 여전히 알바니아의 국가 원수 였을지라도 독일 제국군에 합류했다. 1921 년, 명예의 평화는 공식적으로 알바니아의 지위를 결정했습니다. 오스트리아의 영향력 아래서가 아니라 오스만 칼리프의 공식 가신으로서. Wilhelm 왕자의 권위하에 복원된 공국. 반란이 시작 되더라도 Wilhelm 왕자는 오스만 제국의 지원 덕분에 이 나라를 장악 할 수 있었습니다. 그러나 그가 지불해야했던 대가는 왕자가 매우 야심있는 Aymed Zogu를 총리로 임명하도록 강요하는 것과 같은 내부 정치에 대한 오스만 제국의 통제였다."
+albania.1.d:0 "1912년 제1차 발칸 전쟁 당시 바르샤바에서 열린 알바니아의 알바니아 민족 의회는 1913년에 비드의 빌헬름이 왕자로 인정 받을 수 있다는 조건 하에 주요 강대국들에 의해 받아들여진 독립을 선언했다. 세계 대전의 발발은 오스트리아-헝가리 제국이 그들과 함께 싸울 것을 요구했기 때문에 국가에 더 많은 문제를 안겨 주었다. 빌헬름 왕자는 런던 협약에서의 알바니아의 중립성을 인용하면서 그가 받던 보상은 중단되었다. 그의 정권은 무너졌고 빌헬름 왕자는 1914 년 9 월 3 일에 나라를 떠났고 형식적으로 그가 여전히 알바니아의 국가 원수 였을지라도 독일 제국군에 합류했다. 1921 년, 명예의 평화는 공식적으로 알바니아의 지위를 결정했습니다. 오스트리아의 영향력 아래서가 아니라 오스만 칼리프의 공식 가신으로서. 빌헬름 왕자의 권위하에 복원된 공국. 반란이 시작 되더라도 빌헬름 왕자는 오스만 제국의 지원 덕분에 이 나라를 장악 할 수 있었습니다. 그러나 그가 지불해야했던 대가는 왕자가 매우 야심있는 아흐메드 조구를 총리로 임명하도록 강요하는 것과 같은 내부 정치에 대한 오스만 제국의 통제였다."
 albania.1.a:0 "알바니아를 통치한다!"
 
 albania.2.t:0 "알바니아의 운명"
-albania.2.d:0 "오랫동안 오스만은 Wilhelms을 왕좌에 올리기 위해 독일과의 불편한 합의로 우리를 지배했다. 오늘날, 오스만에서 문제가 일어났고, Zog는 자유 알바니아를 설립하기 위해서, 한 번에 왕좌를 차지하기를 원했다."
-albania.2.a:0 "Wilhelms을 폐위시키고 Zog를 모든 알바니아인들의 통치자로 삼는다!"
-albania.2.b:0 "무의미하군! Wilhelms은 사람들에게 사랑 받고있다!"
+albania.2.d:0 "오랫동안 오스만은 빌헬름을 왕좌에 올리기 위해 독일과의 불편한 합의로 우리를 지배했다. 오늘날, 오스만에서 문제가 일어났고, 조그는 자유 알바니아를 설립하기 위해서, 한 번에 왕좌를 차지하기를 원했다."
+albania.2.a:0 "빌헬름을 폐위시키고 조그를 모든 알바니아인들의 통치자로 삼는다!"
+albania.2.b:0 "무의미하군! 빌헬름은 사람들에게 사랑 받고있다!"
 
-albania.3.t:0 "알바니아의 Wilhelms은 폐위 되었습니다!"
-albania.3.d:0 "오랫동안 우리는 Wilhelms을 왕좌에 올리기 위해 독일과의 불편한 합의로 알바니아를 지배했다. 오늘날, 알바니아의 Zog는 Wilhelm을 쿠데타로 폐위 시켰습니다. 우리는 이 혼란에 어떻게 대처해야 합니까?"
-albania.3.a:0 "Zog를 새로운 왕으로 인정하고, 알바니아를 보내준다"
+albania.3.t:0 "알바니아의 빌헬름은 폐위 되었습니다!"
+albania.3.d:0 "오랫동안 우리는 빌헬름을 왕좌에 올리기 위해 독일과의 불편한 합의로 알바니아를 지배했다. 오늘날, 알바니아의 조그는 빌헬름을 쿠데타로 폐위 시켰습니다. 우리는 이 혼란에 어떻게 대처해야 합니까?"
+albania.3.a:0 "조그를 새로운 왕으로 인정하고, 알바니아를 보내준다"
 albania.3.b:0 "신성 모독이다! 건방진 놈들을 부셔라!"
 
 albania.4.t:0 "알바니아의 반란이 성공했다!"
-albania.4.d:0 "Zog 1세와 거만하게 자신을 꾸미는 Ahmed Zogu가 이끄는 알바니아 군대가 알바니아를 지배하게 되었다. 우리의 주둔군들은 포로로 잡혀 있고, 몇몇 장군들은 우리의 예전 빌라예트를 되찾으려는 것이 거의 이득이 되지 않을 것이라고 경고한다. 알바니아의 독립을 인정할까요?"
+albania.4.d:0 "조그 1세와 거만하게 자신을 꾸미는 아흐메드 조구가 이끄는 알바니아 군대가 알바니아를 지배하게 되었다. 우리의 주둔군들은 포로로 잡혀 있고, 몇몇 장군들은 우리의 예전 빌라예트를 되찾으려는 것이 거의 이득이 되지 않을 것이라고 경고한다. 알바니아의 독립을 인정할까요?"
 albania.4.a:0 "그들의 독립을 받아들여라..."
 albania.4.b:0 "절대!"
 
