--- a/Kaiserreich Korean Translation/localisation/KR_Japan_Foreign_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Japan_Foreign_l_english.yml
@@ -433,7 +433,7 @@ japfor.61.d:0 "Our envoy in Hawaii reports the government have refused our gener
 japfor.61.a:0 "This was a silly idea. Invade!"
 japfor.61.b:0 "Hmph. Their loss!"
 
-japfor.62.t:0 "Japan threatens" 
+japfor.62.t:0 "Japan threatens us!" 
 japfor.62.d:0 "A large Japanese task force has sailed into the islands and is threatening to attack us if we do not bow to their demand of full surrender!"
 japfor.62.a:0 "Resist them and call for help!"
 japfor.62.b:0 "Surrender is our only option."
@@ -443,7 +443,7 @@ japfor.63.d:0 "A victory!"
 japfor.63.a:0 "Banzai!"
 
 japfor.64.t:0 "Hawaii begs fo"
-japfor.64.d:0 "Japan is pounding at the door of Hawaii and they have come to us begging for assistance. Should we respjapfor."
+japfor.64.d:0 "Japan is pounding at the door of Hawaii and they have come to us begging for assistance. Should we respond."
 japfor.64.a:0 "Offer our protection."
 japfor.64.b:0 "They left us, remember."
 japfor.65.t:0 "Hawaii resists with American Backing"
