--- a/Kaiserreich Korean Translation/localisation/KR_Japan_Foreign_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Japan_Foreign_l_english.yml
@@ -442,8 +442,8 @@ japfor.63.t:0 "Hawaii Surrenders!"
 japfor.63.d:0 "A victory!"
 japfor.63.a:0 "Banzai!"
 
-japfor.64.t:0 "Hawaii begs fo"
-japfor.64.d:0 "Japan is pounding at the door of Hawaii and they have come to us begging for assistance. Should we respond."
+japfor.64.t:0 "Hawaii begs for help"
+japfor.64.d:0 "Japan is pounding at the door of Hawaii and they have come to us begging for assistance. Should we respond?"
 japfor.64.a:0 "Offer our protection."
 japfor.64.b:0 "They left us, remember."
 japfor.65.t:0 "Hawaii resists with American Backing"
