--- a/Kaiserreich Korean Translation/localisation/KR_Annexations_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Annexations_l_english.yml
@@ -105,10 +105,10 @@ annex.33.b:0 "룩셈부르크를 프랑스에 흡수한다"
 annex.34.t:0 "로만디 통합"
 annex.34.d:0 "제네바를 중심으로 한 로만디 지역이 팽창하는 우리 국가에 굳건히 통합되었습니다."
 annex.34.a:0 "완벽하군!"
-annex.35.t:0 "Integration of Wallonia"
-annex.35.d:0 "Wallonia region centred in Namur is now firmly integrated into our growing state."
-annex.36.t:0 "Integration of Luxemburg"
-annex.36.d:0 "The former imperial state of Luxemburg is now firmly integrated into our growing state."
+annex.35.t:0 "왈로니아 합병"
+annex.35.d:0 "나무르에 위치한 왈로니아 지역이 성장하는 우리의 국가에 완전히 합병되었습니다."
+annex.36.t:0 "룩셈부르크 합병"
+annex.36.d:0 "전 룩셈부르크 황제국이 커져가는 우리의 국가에 완전히 합병되었습니다."
 annex.37.t:0 "Integration of Alsace-Lorraine"
 annex.37.d:0 "The former imperial province of Alsace-Lorraine is now firmly integrated into our homeland."
 annex.38.t:0 "Integration of Bosnia"
@@ -119,42 +119,42 @@ annex.40.t:0 "Integration of Dalmatia"
 annex.40.d:0 "The former provinces of the Kingdom of Croatia inhabited by significant Serbian population are now firmly integrated into our motherland."
 annex.41.t:0 "Integration of Montenegro"
 annex.41.d:0 "The former provinces of the Kingdom of Montenegro inhabited by significant Serbian population are now firmly integrated into our motherland."
-annex.42.t:0 "The Annexation of Southern Italy and Reunification of Italy"
-annex.42.d:0 "Italy is now, once again more than just a geographical term. The Army of Southern Italy has surrendered, and the Socialist Republic has been annexed. Some people celebrated in the streets, but not everyone was as happy to see us. This will change with time."
-annex.42.a:0 "Hurrah!"
-annex.43.t:0 "Fate of the Southern Italy"
-annex.43.d:0 "Our armed forces have successfully occupied the entire Southern Italy. There is some resistance among local population, but it will be crushed under our heels!"
-annex.43.a:0 "Liberate Socialist Italy!"
-annex.43.b:0 "Liberate Italian Republic!"
-annex.43.c:0 "Liberate Italian Federation!"
-annex.43.e:0 "Liberate Kingdom of Two Sicilies!"
-annex.43.f:0 "Offer it to the Italian Federation!"
-annex.43.g:0 "Return it to our loyal ally!"
-annex.44.t:0 "An alliance in exchange for our land"
+annex.42.t:0 "남부 이탈리아의 합병과 이탈리아 통일"
+annex.42.d:0 "다시 한번, '이탈리아'는 더 이상 특정 지역을 나타내는 지리 용어가 아닙니다. 남부 이탈리아군은 항복했고, 사회주의공화국은 합병되었습니다. 어떤 사람들은 거리로 뛰쳐나와 환호하지만, 모든 사람들이 이런 상황을 고깝게 보지는 않습니다. 시간이 해결해주겠지요."
+annex.42.a:0 "만세!"
+annex.43.t:0 "남부 이탈리아의 운명"
+annex.43.d:0 "우리 병력이 성공적으로 남부 이탈리아를 점령했습니다. 지역 인구들 중에 반발하는 이들이 있지만, 이들은 결국 저희의 군홧발에 짓밟히고 말것입니다!"
+annex.43.a:0 "사회주의 이탈리아를 해방하라!"
+annex.43.b:0 "이탈리아 공화국을 해방하라!"
+annex.43.c:0 "이탈리아 연방을 해방하라!"
+annex.43.e:0 "시칠리아 왕국을 해방하라!"
+annex.43.f:0 "이탈리아 왕국이 가져갈 것이다."
+annex.43.g:0 "우리의 충성스러운 우방에게 돌려주어라!"
+annex.44.t:0 "우리의 땅을 대가로 얻은 동맹"
 annex.44.d:0 "The evil Syndicalists in the south have fallen, and their occupiers are offering us their lands in exchange for an alliance"
-annex.44.a:0 "A great deal!"
-annex.44.b:0 "Never!"
-annex.45.t:0 "Honour the deal"
-annex.45.d:0 "In accordance with our agreement, we are now giving the Italian provinces we conquered back to the Italian government."
-annex.45.a:0 "We have to obey"
-annex.46.t:0 "An alliance with Vienna in exchange for our land"
-annex.46.d:0 "Austrians have successfully defeated the Socialist Italy and they said they will give us back our provinces if we renounce our claims on Venetian region and join their alliance."
-annex.47.t:0 "Integration of south Italy"
-annex.47.d:0 "We've controlled south Italy for some time now, and it seems like the local population have finally accepted our rule."
-annex.48.t:0 "The Fate of Russia"
-annex.48.d:0 "After a long fight with the Russian state, we have launched a full offensive and forced the Russian armed forces to surrender. Moscow is now in our hands and fate of the Russian nation with it!"
-annex.48.a:0 "Liberate a Soviet Russia!"
-annex.48.b:0 "Liberate a friendly Russia!"
-annex.48.e:0 "Liberate Russia and Siberia"
-annex.48.c:0 "Occupy them!"
-annex.49.t:0 "The Future of Russia"
-annex.49.d:0 "With the negotiations about Russia's territory complete, it is now time to begin planning it's own course. The majority of our government has united in supporting Louis Ferdinand, the second son of Wilhelm III as he is married a daughter of Kyril Romanov. Several ministers have suggested the pro-German Pavel Bermondt-Avalov to lead Russia instead however. What shall be done?"
-annex.49.a:0 "Prince Louis Ferdinand will rule as Ivan VII"
-annex.49.b:0 "Appoint Pavel Bermondt-Avalov"
-annex.50.t:0 "A Hohenzollern Tsar"
-annex.50.d:0 "The Germans have installed a Hohenzollern onto the throne of Russia, and while he has converted to the Orthodox faith it is not likely that 'Ivan VII' will have an easy time ruling Russia."
-annex.50.a:0 "There's worse in alternative history I guess"
-annex.51.t:0 "Our new Prime Minister"
+annex.44.a:0 "좋아!"
+annex.44.b:0 "절대 안 되지!"
+annex.45.t:0 "약속을 이행한다"
+annex.45.d:0 "우린 이제 협약에 따라서, 우리가 정복한 이탈리아 지역을 이탈리아 정부에게 돌려줄 것입니다.."
+annex.45.a:0 "따라야 한다"
+annex.46.t:0 "우리의 땅을 대가로 비엔나와 동맹을"
+annex.46.d:0 "오스트라아인들은 성공적으로 사회주의 이탈리아를 무찔렀고, 그들이 말하길, 우리가 베네치아 지역의 소유권 주장을 철회하고 자신들과 동맹을 맺는다면 우리의 영토를 돌려줄 것이랍니다."
+annex.47.t:0 "남부 이탈리아의 합병"
+annex.47.d:0 "우리는 지금까지 꽤 오래 남부 이탈리아를 통치했고, 드디어 지역 인구가 저희의 통치를 받아드리는 것으로 보입니다."
+annex.48.t:0 "러시아의 운명"
+annex.48.d:0 "러시아와의 긴 싸움 끝에, 저희는 총공세를 벌였고 러시아의 병력이 항복하도록 만들었습니다. 모스코바와 러시아 국가들의 운명은 저희 손에 달렸습니다!""
+annex.48.a:0 "소비에트 연방을 해방하라!"
+annex.48.b:0 "우호적인 러시아를 해방하라!"
+annex.48.e:0 "러시아와 시베리아를 해방하라"
+annex.48.c:0 "모두 우리가 차지한다!"
+annex.49.t:0 "러시아의 미래"
+annex.49.d:0 "러시아 영토에 대한 협상이 끝나면서, 그들 스스로 나아갈 길을 계획해줘야 할 때입니다. 정부의 대부분은 루이스 페르디난드를 지지하는 것으로 통일되어있고, 윌헬름 2세의 차남은  키릴 로마노브의 딸과 결혼해 있습니다. 허나 몇몇 장관들은 친-독일 파벨 버몬트-아발로브가 러시아를 이끌어야 한다고 제안했습니다. 어떻게 해야 할까요?"
+annex.49.a:0 "루이스 페르디난드 왕자가 이반 7세로 즉위할 것이다"
+annex.49.b:0 "파벨 버몬트-아발로브를 임명시켜라"
+annex.50.t:0 "호헨촐레른가에서 차르를 뽑아라"
+annex.50.d:0 "독일이 호헨촐레른가의 사람을 러시아의 왕좌에 앉혔고, 그는 동방정교회로 개종했지만, '이반 7'세가 러시아를 통치하기는 쉬워보이지 않습니다."
+annex.50.a:0 "대체 역사에는 더 끔찍한 일도 있는법이니까, 뭐."
+annex.51.t:0 "우리의 새로운 총리"
 annex.51.d:0 "A little while ago, Pavel Bermondt-Avalov was been 'suggested' to lead Russia by the Germans and shortly after became our new leader. He has the support of the people if only because we are now no longer fighting the Germans."
 annex.51.a:0 "Better then an occupation..."
 annex.52.t:0 "Fate of America"
